# StoneyVCV

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeOptions.json  CMakePresets.json  LICENSE  Makefile  README.md  VERSION  dep.mk  plugin.json  vcpkg-configuration.json  vcpkg.json
.github/workflows/: macos-arm-latest.yml  macos-latest.yml  static.yml  ubuntu-latest.yml  windows-latest.yml  windows.yml
dep/: Makefile
dep/StoneyDSP/: CMakeLists.txt  LICENSE  vcpkg.json
dep/StoneyDSP/include/StoneyDSP/: Core.hpp  DSP.hpp  SIMD.hpp
dep/StoneyDSP/include/StoneyDSP/Core/: common.hpp  exceptions.hpp  system.hpp  version.hpp
dep/StoneyDSP/include/StoneyDSP/DSP/: Gain.hpp  Oscillator.hpp
dep/StoneyDSP/include/StoneyDSP/SIMD/: Vector.hpp
dep/StoneyDSP/share/cmake/Modules/: StoneyDSP.cmake  StoneyDSPConfig.cmake  StoneyDSPCoreTargets.cmake  StoneyDSPDSPTargets.cmake  StoneyDSPSIMDTargets.cmake
dep/StoneyDSP/src/: StoneyDSP
dep/StoneyDSP/src/DSP/: Oscillator.cpp
dep/StoneyDSP/test/StoneyDSP/: Core.cpp  SIMD.cpp
dep/VCVRack/: CMakeLists.txt  README.md  vcpkg.json
dep/VCVRack/MyPlugin/: .gitignore  CMakeLists.txt  Makefile  README.md  plugin.json  vcpkg-configuration.json  vcpkg.json
dep/VCVRack/MyPlugin/include/: plugin.hpp
dep/VCVRack/MyPlugin/src/: MyModule.cpp
dep/VCVRack/Rack-SDK/: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  plugin.schema.json  vcpkg.json
dep/VCVRack/Rack-SDK/include/: rack.hpp
dep/VCVRack/Rack-SDK/share/cmake/Modules/: README.md  VCVRack.cmake  rack-sdk.cmake
dep/VCVRack/Rack-SDK/share/cmake/rack-sdk/: rack-sdk-config.cmake  rack-sdk-config.cmake.in  rack-sdk-core-targets.cmake  rack-sdk-dep-targets.cmake  rack-sdk-lib-targets.cmake
dep/VCVRack/share/cmake/: rack-config-version.cmake  rack-config.cmake.in  rack-dep-targets.cmake  rack-lib-targets.cmake  rack-sdk-targets.cmake
dep/VCVRack/share/cmake/Modules/: VCVRack.cmake  VCVRackConfig.cmake  VCVRackRackSDKTargets.cmake  VCVRackRackTargets.cmake  rack-config.cmake  rack-dep-targets.cmake  rack-lib-targets.cmake  rack-sdk-targets.cmake
dep/include/: StoneyDSP.hpp
dep/include/StoneyDSP/: common.hpp  dsp.hpp  simd.hpp  system.hpp  version.hpp
dep/src/: StoneyDSP
dep/vcpkg-registry/: README.md
dep/vcpkg-registry/ports/curl/: vcpkg.json
dep/vcpkg-registry/ports/ghc-filesystem/: vcpkg.json
dep/vcpkg-registry/ports/glew/: vcpkg.json
dep/vcpkg-registry/ports/glfw/: vcpkg.json
dep/vcpkg-registry/ports/jansson/: vcpkg.json
dep/vcpkg-registry/ports/libarchive/: vcpkg.json
dep/vcpkg-registry/ports/libsamplerate/: vcpkg.json
dep/vcpkg-registry/ports/nanosvg/: vcpkg.json
dep/vcpkg-registry/ports/pffft/: vcpkg.json
dep/vcpkg-registry/ports/rack-sdk/2.5.2/: portfile.cmake  vcpkg.json
dep/vcpkg-registry/ports/rtaudio/: vcpkg.json
dep/vcpkg-registry/ports/rtmidi/: vcpkg.json
dep/vcpkg-registry/ports/speexdsp/: vcpkg.json
dep/vcpkg-registry/ports/stoneydsp/0.0.0/: portfile.cmake
dep/vcpkg-registry/ports/tinyexpr/: vcpkg.json
dep/vcpkg-registry/ports/zstd/: vcpkg.json
dep/vcpkg-registry/versions/: baseline.json
dep/vcpkg-registry/versions/c-/: curl.json
dep/vcpkg-registry/versions/g-/: glew.json  glfw.json
dep/vcpkg-registry/versions/j-/: jansson.json
dep/vcpkg-registry/versions/l-/: libarchive.json  libsamplerate.json
dep/vcpkg-registry/versions/n-/: nanosvg.json  nanovg.json
dep/vcpkg-registry/versions/o-/: openssl.json
dep/vcpkg-registry/versions/p-/: pffft.json
dep/vcpkg-registry/versions/r-/: rtaudio.json  rtmidi.json
dep/vcpkg-registry/versions/s-/: speexdsp.json  stoneydsp.json
dep/vcpkg-registry/versions/z-/: zstd.json
dep/vcpkg/ports/nanovg/: vcpkg.json
dep/vcpkg/ports/openssl/: vcpkg.json
dep/vcpkg/ports/rack-sdk/2.5.2/: portfile.cmake  vcpkg.json
dep/vcpkg/ports/rack/2.5.2/: portfile.cmake  vcpkg.json
dep/vcpkg/ports/stoneydsp/0.0.0/: portfile.cmake  vcpkg.json
dep/vcpkg/ports/vcvrack/2.5.2/: portfile.cmake  vcpkg.json
dep/vcpkg/versions/: baseline.json
dep/vcpkg/versions/g-/: ghc-filesystem.json
dep/vcpkg/versions/r-/: rack-sdk.json  rack.json
dep/vcpkg/versions/v-/: vcvrack.json
doc/: Doxyfile
docs/: .gitignore  BuildingTheTestsForCatch2WithCMake.md  Doxyfile  HP1.md  HP2.md  HP4.md  Makefile  VCA.md  index.md
include/: HP1.hpp  HP2.hpp  HP4.hpp  StoneyVCV.hpp  plugin.hpp
include/StoneyVCV/: ComponentLibrary.hpp  HP1.hpp  HP2.hpp  HP4.hpp  LFO.hpp  VCA.hpp  plugin.hpp  version.hpp
include/StoneyVCV/ComponentLibrary/: PanelWidget.hpp  ParamWidget.hpp  PortWidget.hpp  RoundKnob.hpp  RoundKnobWidget.hpp  Widget.hpp
presets/VCA/: default.json
res/: colors.json
share/cmake/Modules/: StoneyDSP.cmake  StoneyVCVAddTest.cmake  StoneyVCVVersionHelpers.cmake  VCVRack.cmake
share/cmake/StoneyVCV/: StoneyVCVConfig.cmake  StoneyVCVConfig.cmake.in  StoneyVCVTargets-debug.cmake  StoneyVCVTargets-release.cmake  StoneyVCVTargets.cmake
src/: HP1.cpp  HP2.cpp  HP4.cpp  StoneyVCV.cpp  VCO.cpp  plugin.cpp
src/StoneyVCV/: ComponentLibrary.cpp  HP1.cpp  HP2.cpp  HP4.cpp  LFO.cpp  VCA.cpp  plugin.cpp
src/StoneyVCV/ComponentLibrary/: PanelWidget.cpp  ParamWidget.cpp  PortWidget.cpp  Widget.cpp
test/: HP1.cpp  HP2.cpp  HP4.cpp  StoneyDSP.cpp  plugin.cpp
test/StoneyDSP/: simd.cpp
test/StoneyVCV/: HP1.cpp  HP2.cpp  HP4.cpp  LFO.cpp  VCA.cpp  plugin.cpp  test.hpp
